fix: vertically align items in header

--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -4,6 +4,9 @@
   max-width: 1000px
   margin: 0 auto
   width: 90%
+  display: flex
+  align-items: center
+  justify-content: space-between
 
 .head-authorH
   display: inline-block
