--- a/source/css/layout.styl
+++ b/source/css/layout.styl
@@ -138,13 +138,13 @@ del
         vertical-align: middle
 
 .page .back-top
-    margin-right: 40px;
-    cursor: pointer;
+  margin-right: 40px
+  cursor: pointer
 
-  .back-top-icon
-    float: right
-    display: inline-block
-    width: 16px
-    height: 16px
-    background-image: url('/img/back-top.png')
-    background-repeat: no-repeat
+.back-top-icon
+  float: right
+  display: inline-block
+  width: 16px
+  height: 16px
+  background-image: url('/img/back-top.png')
+  background-repeat: no-repeat
